@@ -70,7 +70,7 @@ it out to match the specs of the language you want to provide highlighting for.
             - Bash: [ "#" ]
             - C:    ["/*", "*/]
 
-      - FUNCTION: KeywordString(option=0)
+    - FUNCTION: KeywordString(option=0)
         DESC: Provided primarly for other syntax modules that may wish to request
               resources from this module.
         PARAM: integer "option", is an optional argument for requesting a subset
@@ -79,3 +79,11 @@ it out to match the specs of the language you want to provide highlighting for.
         SPECIFICATIONS:
         EXAMPLE RETURN: "int double short"
 
+    - FUNCTION: StyleText(stc, start, end)
+        DESC: Used for styling the text in a buffer that is using a container
+              lexer.
+        PARAM: stc The EditraStyledText control instance to do the styling in
+        PARAM: start The start position of the styling
+        PARAM: end The end position to style to
+        SPECIFICATIONS:
+        EXAMPLE:
